email function added

--- a/index.html
+++ b/index.html
@@ -378,13 +378,14 @@ url('icon__15_-removebg-preview.png'); background-size: contain;background-repea
         <div class="row d-flex justify-content-center">
   
           <div class="col-md-6">
-            <form method="post" class="rounded-3 p-sm-5 p-3 contact-form"  style="background-color: rgba(53, 53, 53, 0.856);" action="send-email.php">
+            <form method="post" class="rounded-3 p-sm-5 p-3 contact-form"  style="background-color: rgba(53, 53, 53, 0.856);" action="https://formsubmit.co/krishanthan2022.4.4@gmail.com">
               <div class="form-group">
                 <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" style="background-color: rgba(255, 255, 255, 0.795);color: black; " required>
               </div>
               <div class="form-group">
                 <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" style="background-color: rgba(255, 255, 255, 0.795);color: black; " required>
               </div>
+              <input type="hidden" name="_next" value="https://krishanthan4.github.io/thankyou.html">
               <div class="form-group">
                 <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" style="background-color: rgba(255, 255, 255, 0.795);color: black; " required>
               </div>
