--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ url('icon__15_-removebg-preview.png'); background-size: contain;background-repea
               </div>
               <input type="hidden" name="_next" value="https://krishanthan4.github.io/thankyou.html">
               <div class="form-group">
-                <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" style="background-color: rgba(255, 255, 255, 0.795);color: black; " required>
+                <input type="text" class="form-control" id="subject" name="_subject" placeholder="Subject" style="background-color: rgba(255, 255, 255, 0.795);color: black; " required>
               </div>
               <div class="form-group">
                 <textarea class="form-control" id="message" name="message" rows="5" placeholder="Message" style="background-color: rgba(255, 255, 255, 0.795);color: black; " required></textarea>
