--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             <img src="tryhackme.png" draggable="false" class="w-10  " alt="">
         </a>
         <a href="https://linkedin.com/in/r-krishanthan-8a6864241/">
-   
             <img src="linkedin.png" draggable="false" class="w-10  " alt="">
         </a>
-            
+            <a href="https://app.intigriti.com/researcher/profile/rkrishanthan">
                 <img src="intigriti.png" draggable="false" class="w-10  " alt="">
+            </a>
             </div>
 
         </div>
@@ -240,12 +240,8 @@
                         LinkedIn.
                         Your security is our priority</p>
                         <li class=" space-x-2">
-                            <i class="fas fa-envelope text-gray-400"></i>
-                            <span class="text-gray-500">Email: krishanthan2022.4.4@gmail.com</span>
-                        </li>
-                        <li class=" space-x-2">
                             <i class="fab fa-linkedin text-gray-400"></i>
-                            <span class="text-gray-500">linkedin.com/in/r-krishanthan-8a6864241/</span>
+                            <span class="text-gray-500">www.linkedin.com/in/ramakrishnan-krishanthan-912b5b293/</span>
                         </li>  
                         <li class=" space-x-2">
                             <i class="fab fa-twitter text-gray-400"></i>
