--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                 </div>
                      <!-- Project 6 -->
                 <div class="bg-white bg-opacity-30 p-4 rounded-lg">
-                    <a href="https://github.com/krishanthan4/react-chat-original" class="text-lg font-semibold mt-2">Software Company Website</a>
-                    <p class="text-gray-500">Tech Stack : Next JS ,Tailwindcss</p>
-                    <p class="text-gray-500">This is a software company website made for a startup</p>
+                    <a href="https://github.com/krishanthan4/react-chat-original" class="text-lg font-semibold mt-2">Bash Scripts for Chrome Under Control</a>
+                    <p class="text-gray-500">Tech Stack : Bash</p>
+                    <p class="text-gray-500">this script can disable incognito mode ,block adding profiles and disable guest mode in chrome browser , Linux</p>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
                     <ul style="padding-left: 40px;">
                         <li>Bug Bounty Hunting</li>
                         <li>Network and Web Pentesting</li>
-                        <li>Malware Analysis</li>
+                        <li>API Testing</li>
                     </ul>
                 </div>
            
@@ -185,30 +185,7 @@
             </div>
         </div>
     </section>
-    <!-- Contact Section -->
-    <section id="contact" class="section bg-opacity-50" style="background-color: rgba(240, 240, 240, 0.658);">
-        <div class="container">
-            <h2 class="text-center text-3xl mb-5">Contact Me</h2>
-            <div class="text-center gap-8">
-                <ol class="">
-                    <p class="text-gray-500 mb-5">Have a project in mind or need ethical hacking services? Feel free to reach out through 
-                        Email,
-                        Twitter or
-                        LinkedIn.
-                        Your security is our priority</p>
-                        <li class=" space-x-2">
-                            <i class="fab fa-linkedin text-gray-400"></i>
-                            <span class="text-gray-500">www.linkedin.com/in/ramakrishnan-krishanthan-912b5b293/</span>
-                        </li>  
-                        <li class=" space-x-2">
-                            <i class="fab fa-twitter text-gray-400"></i>
-                            <span class="text-gray-500">twitter.com/4Krishanthan</span>
-                        </li>
-                    </ol>
-           
-            </div>
-        </div>
-    </section>
+  
     <!-- Footer Section -->
     <footer class=" text-black bg-gray-200 py-1">
         <div class="container">
