--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       justify-content: center;
       align-items: center;
     }
-    <style/>
+    </style>
   <div class="background-image text-center container flex flex-col justify-center items-center">
             <h1 class="text-5xl mb-4">Hi, I'm Krishanthan</h1>
             <p class="text-lg mb-5 " style="width: 70%;">Software Engineer (U.G.) | Cybersecurity Enthusiast</p>
