--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ max-width: 70%;
       align-items: center;
     }
     </style>
-     <div class="tooltip w-full p-2 bg-gradient-to-r from-green-500 to-yellow-300 cursor-pointer text-white text-center">Why this website Looks So Basic ?
+     <div class="w-full p-2 bg-gradient-to-r from-purple-500 to-blue-300 cursor-pointer text-white text-center">The Website is under maintanance
+      </div>
+         <div class="tooltip w-full p-2 bg-gradient-to-r from-green-500 to-yellow-300 cursor-pointer text-white text-center">Why this website Looks So Basic ?
         <span class="tooltiptext">Whenever I learn something new, I feel like rebuilding my portfolio with it. Keeping it simple HTML just doesn’t feel right 😄</span>
       </div>
   <div class="background-image text-center container flex flex-col justify-center items-center">
