--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
   <link rel="stylesheet" href="style.css"/>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="contactStyle.css"/>
 </head>
 <body>
@@ -34,13 +35,8 @@
         <i class="fas fa-moon"></i>
     </div>
 
-    <!-- Shortcut Hint -->
-    <div class="shortcut-hint">
-        Press 'T' to toggle dark mode
-    </div>
-
     <!-- Header/Navbar -->
-    <header class="fixed w-full  shadow-md z-50 transition duration-300">
+    <header class="fixed w-full card-custom shadow-md z-50 transition duration-300">
         <div class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
                 <div class="text-2xl font-bold text-gray-custom">
@@ -71,6 +67,8 @@
             </div>
         </div>
     </header>
+    </div>
+    <div class="toast-container" id="toast-container"></div>
 
     <!-- Hero Section -->
      <div class="max-w-6xl mx-auto">
@@ -682,7 +680,7 @@
 </section>
 
 <!-- Footer -->
-<footer class="py-6 bg-gray-800 text-white text-center">
+<footer class="py-6 bg-black text-white text-center">
 <div class="container mx-auto px-6">
 <p>&copy; 2023 Krishanthan. All rights reserved.</p>
 </div>
@@ -693,6 +691,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 <script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 <script src="script.js"></script>
 <script>
 AOS.init();
